<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewExamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewExamTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayoutExamTypeIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/textViewTimeHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTimeHint"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
     <TextView
        android:id="@+id/textViewTimeHintMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:text="@string/textViewTimeHintMinute"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
 	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonReturnExaminationPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonReturnExaminationPaper" />

        <Button
            android:id="@+id/buttonStartExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonStartExam" />

    </LinearLayout>

</LinearLayout>
